--- a/index.html
+++ b/index.html
@@ -5,117 +5,239 @@
     <title>My CV</title>
     <meta charset=utf-8 />
     <meta name=viewport content=width=device-width,initial-scale=1>
-    <link rel="stylesheet" type="text/css" href="./dist/index.css">
-    <style>
+    <link rel=stylesheet type="text/css" href="./dist/index.css">
 
-    </style>
+    <!-- Load d3.js -->
+    <script src="https://d3js.org/d3.v4.js"></script>
+
+    <!-- Load d3-cloud -->
+    <script src="https://cdn.jsdelivr.net/gh/holtzy/D3-graph-gallery@master/LIB/d3.layout.cloud.js"></script>
 </head>
 
 <body>
-    <header class="header">
-        <div class="header__name">
-            Alexandr </br>
-            Andrienko
-        </div>
-        <div class="header__main-info">
-            10 years’ experience of development and implementation of complex software solutions.
-        </div>
-        <div class="header__avatar"></div>
-        <div class="header__personal-info">
-            <p>Ukraine/ Kiev</p>
-            <hr>
-            <p> al3xandrienko@gmail.com</p>
-            <p>+380637900278</p>
-        </div>
 
-        <div class="bg-header"></div>
-    </header>
+    <script>
 
+        document.addEventListener('DOMContentLoaded', (event) => {
+            // , ,  / ,  / , , , , EJB, log4j, SOA, Web Services,  / , ASP.Net MVC, ,
+            //  HTML 5, , JavaScript, , CoffeeScript, Backbone.js, , CSS / CSS3, SQL / PLSQL, WebSphere ESB, IBM BPM.
+            let s = 30;
+            // List of words
+            let myWords = [
+                { word: "Java", size: s * 1 },
+                { word: "J2EE", size: s * 0.7 },
+                { word: "JSP", size: s * 0.8 },
+                { word: "Servlets", size: s * 0.7 },
+                { word: "Struts", size: s * 0.6 },
+                { word: "JSF", size: s * 0.5 },
+                { word: "JDBC", size: s * 0.6 },
+                { word: "JPA", size: s * 0.4 },
+                { word: ".Net", size: s * 0.3 },
+                { word: "ASP.Net", size: s * 0.7 },
+                { word: "jQuery", size: s * 1 },
+                { word: "XML", size: s * 0.9 },
+                { word: "C#", size: s * 0.9 },
+                { word: "MySQL", size: s * 0.8 },
+                { word: "PostgreSQL", size: s * 0.5 },
+            ]
 
-    <hr>
-    <div class="content">
-        <section class="education">
-            <div class="icon"></div>
-            <div class="title">
-                <b>Education</b>
-            </div>
-            <section>
-                <h1><span>2013</span> - Specialist’s degree</h1>
-                <div>
-                    National Technical University of Ukraine Department of Technical Cybernetics, Specialty ‘Flexible
-                    computerized systems and robotics’
+            // set the dimensions and margins of the graph
+            let margin = { top: 1, right: 1, bottom: 1, left: 1 },
+                width = 250 - margin.left - margin.right,
+                height = 200 - margin.top - margin.bottom;
+
+            // append the svg object to the body of the page
+            let svg = d3.select("#my_dataviz")
+                .append("svg")
+                .attr("width", width + margin.left + margin.right)
+                .attr("height", height + margin.top + margin.bottom)
+                .append("g")
+                .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+            // This function takes the output of 'layout' above and draw the words
+            // Wordcloud features that are THE SAME from one word to the other can be here
+            const draw = (words) => {
+                svg
+                    .append("g")
+                    .attr("transform", "translate(" + layout.size()[0] / 2 + "," + layout.size()[1] / 2 + ")")
+                    .selectAll("text")
+                    .data(words)
+                    .enter().append("text")
+                    .style("font-size", function (d) { return d.size; })
+                    .style("fill", "#000")
+                    .attr("text-anchor", "middle")
+                    .style("font-family", "Inconsolata")
+                    .attr("transform", function (d) {
+                        return "translate(" + [d.x, d.y] + ")rotate(" + d.rotate + ")";
+                    })
+                    .text(function (d) { return d.text; });
+            }
+            // Constructs a new cloud layout instance. It run an algorithm to find the position of words that suits your requirements
+            // Wordcloud features that are different from one word to the other must be here
+            let layout = d3.layout.cloud()
+                .size([width, height])
+                .words(myWords.map(function (d) { return { text: d.word, size: d.size }; }))
+                .padding(2)        //space between words
+                .rotate(0)
+                .fontSize(function (d) { return d.size; })      // font size of words
+                .on("end", draw);
+            layout.start();
+        })
+    </script>
+    <div class="page-container">
+        <div class="printable-page">
+            <header class="header">
+                <div class="icon-bg1 bg-image"></div>
+                <div class="header__name">
+                    Alexandr </br>
+                    Andrienko
                 </div>
-            </section>
-        </section>
+                <div class="header__main-info">
+                    10 years’ experience of development and implementation of complex software solutions.
+                </div>
+                <div class="header__avatar"></div>
+                <div class="header__personal-info">
+                    <span>Ukraine/ Kiev</span>
+                    <div class="icon-placeholder"></div>
+                    <span> al3xandrienko@gmail.com</span>
+                    <div class="icon-mail"></div>
+                    <span>+380637900278</span>
+                    <div class="icon-phone"></div>
+                </div>
 
-        <section class="skills">
-            <b>Skills</b>
-            EcmaScript 2019 (ES6+) HTML 5 CSS 3 TypeScript React Redux PostCSS RxJS Algorithms
-        </section>
 
-        <section class="experience">
-            <!-- Freelancer 2008-2010 Freelance, Part-time (Ukraine, Kyiv)
+                <div class="bg-header"></div>
+            </header>
+            <!-- <hr> -->
+            <div class="content">
+                <section class="education">
+                    <div class="icon-graduate-cap"></div>
+                    <b>Education</b>
+                    <section>
+                        <h1><span>2013</span> - Specialist’s degree</h1>
+                        <div>
+                            National Technical University of Ukraine Department of Technical Cybernetics, Specialty
+                            ‘Flexible
+                            computerized systems and robotics’
+                        </div>
+                    </section>
+                </section>
+
+                <section class="skills">
+                    <div class="icon-fix"></div>
+                    <b>Skills</b>
+                    <ul>
+                        <li>
+                            EcmaScript 2019 (ES6+)
+                            <!-- <div>
+                        <i class="icon-record"></i>
+                        <i class="icon-record"></i>
+                        <i class="icon-record"></i>
+                        <i class="icon-record"></i>
+                        <i class="icon-android-radio-button-off"></i>
+                    </div> -->
+                        </li>
+                        <li>HTML 5</li>
+                        <li>CSS 3</li>
+                        <li>TypeScript</li>
+                        <li>React</li>
+                        <li>Redux</li>
+                        <li>PostCSS</li>
+                        <li>RxJS</li>
+                        <li>Ajax</li>
+                        <li>Algorithms</li>
+                    </ul>
+
+                    <b>Previously worked with</b>
+                    <div id="my_dataviz"></div>
+                </section>
+
+                <section class="experience">
+                    <!-- Freelancer 2008-2010 Freelance, Part-time (Ukraine, Kyiv)
         University work, open source projects and freelance -->
-        <b>Work Experience</b>
-            <section class="job">
-                <div class="job__company">
-                    <b>PNN (Ukraine/Kiev)</b> - <span>04/2010 - 05/2013</span>
-                </div>
-                <!-- //////////////////////////////////////// -->
-                <div class="job__project">
-                    <h1 class="title">
-                        <b>SMS Analyzer</b> - <span class="position">Software Developer</span>
-                    </h1>
-                    <p class="description">
-                        Cross-platform solution provides high-load, scalable and secure functionality for processing of
-                        incoming SMS-s. Work services accept and analyze incoming SMS-s via SMPP protocol as SMS-s and
-                        send
-                        outgoing SMS-s.
-                    </p>
-                    <p class="role">Back End, Front End Developing.</p>
-                    <p class="thech">
-                        Java, C++, JSP, Struts, JDK 6, J2EE, JNI, XML, XSLT, HTML\DHTML, Ajax, RMI. Platforms &
-                        Databases:
-                        Linux Red Hat Enterprise 5, Apache 2.2, Tomcat 6, Postgre SQL 8.x, memcache, binary storage.
-                    </p>
-                </div>
-                <!-- //////////////////////////////////////// -->
-                <!-- //////////////////////////////////////// -->
-                <div class="job__project">
-                    <h1 class="title">
-                        <b>SMS Analyzer</b> - <span class="position">Software Developer</span>
-                    </h1>
-                    <p class="description">
-                        Cross-platform solution provides high-load, scalable and secure functionality for processing of
-                        incoming SMS-s. Work services accept and analyze incoming SMS-s via SMPP protocol as SMS-s and
-                        send
-                        outgoing SMS-s.
-                    </p>
-                    <p class="role">Back End, Front End Developing.</p>
-                    <p class="thech">
-                        Java, C++, JSP, Struts, JDK 6, J2EE, JNI, XML, XSLT, HTML\DHTML, Ajax, RMI. Platforms &
-                        Databases:
-                        Linux Red Hat Enterprise 5, Apache 2.2, Tomcat 6, Postgre SQL 8.x, memcache, binary storage.
-                    </p>
-                </div>
-                <!-- //////////////////////////////////////// -->
-            </section>
-        </section>
+                    <div class="icon-tick"></div>
+                    <b>Work Experience</b>
+                    <section class="job">
+                        <div class="job__company">
+                            <b>PNN (Ukraine/Kiev)</b> - <span>04/2010 - 05/2013</span>
+                        </div>
+                        <!-- //////////////////////////////////////// -->
+                        <div class="job__project">
+                            <h1 class="title">
+                                <b>SMS Analyzer</b> - <span class="position">Software Developer</span>
+                            </h1>
+                            <p class="description">
+                                Cross-platform solution provides high-load, scalable and secure functionality for
+                                processing
+                                of
+                                incoming SMS-s. Work services accept and analyze incoming SMS-s via SMPP protocol as
+                                SMS-s
+                                and
+                                send
+                                outgoing SMS-s.
+                            </p>
+                            <p class="role">Back End, Front End Developing.</p>
+                            <p class="thech">
+                                Java, C++, JSP, Struts, JDK 6, J2EE, JNI, XML, XSLT, HTML\DHTML, Ajax, RMI. Platforms &
+                                Databases:
+                                Linux Red Hat Enterprise 5, Apache 2.2, Tomcat 6, Postgre SQL 8.x, memcache, binary
+                                storage.
+                            </p>
+                        </div>
+                        <!-- //////////////////////////////////////// -->
+                        <!-- //////////////////////////////////////// -->
+                        <div class="job__project">
+                            <h1 class="title">
+                                <b>SMS Analyzer</b> - <span class="position">Software Developer</span>
+                            </h1>
+                            <p class="description">
+                                Cross-platform solution provides high-load, scalable and secure functionality for
+                                processing
+                                of
+                                incoming SMS-s. Work services accept and analyze incoming SMS-s via SMPP protocol as
+                                SMS-s
+                                and
+                                send
+                                outgoing SMS-s.
+                            </p>
+                            <p class="role">Back End, Front End Developing.</p>
+                            <p class="thech">
+                                Java, C++, JSP, Struts, JDK 6, J2EE, JNI, XML, XSLT, HTML\DHTML, Ajax, RMI. Platforms &
+                                Databases:
+                                Linux Red Hat Enterprise 5, Apache 2.2, Tomcat 6, Postgre SQL 8.x, memcache, binary
+                                storage.
+                            </p>
+                        </div>
+                        <!-- //////////////////////////////////////// -->
+                    </section>
+                </section>
 
-        <section class="hobbies">
-            <b>hobbies</b>
-            <div class="icon-art"></div>
-            Photography Drawing/Art Snowboarding Gaming
-        </section>
+                <section class="hobbies">
+                    <div class="icon-puzzle"></div>
+                    <b>hobbies</b></br>
+
+                    <div class="icon-art"></div>
+                    <p>Drawing/Art</p>
+                    <div class="icon-camera"></div>
+                    <p>Photography</p>
+                    <div class="icon-clapperboard"></div>
+                    <p>Movies</p>
+                    <div class="icon-snowboard-race"></div>
+                    <p>Snowboarding Gaming</p>
+                    <div class="icon-gamepad"></div>
+                    <p>Gaming</p>
+                </section>
 
 
-        <!-- company - year project - role - description - Technical - Responsibilities project - role - description -
+                <!-- company - year project - role - description - Technical - Responsibilities project - role - description -
         Technical - Responsibilities -->
-    </div>
+            </div>
 
-    <footer>
-        <div class="bg-footer"></div>
-    </footer>
+            <footer>
+                <div class="bg-footer"></div>
+            </footer>
+        </div>
+    </div>
 </body>
 
 </html>
