--- a/index.html
+++ b/index.html
@@ -213,19 +213,41 @@
                 </section>
 
                 <section class="hobbies">
-                    <div class="icon-puzzle"></div>
-                    <b>hobbies</b></br>
+                    <div class="hobbies__title">
+                        <div class="icon-puzzle"></div>
+                        <b>hobbies</b></br>
+                    </div>
 
-                    <div class="icon-art"></div>
-                    <p>Drawing/Art</p>
-                    <div class="icon-camera"></div>
-                    <p>Photography</p>
-                    <div class="icon-clapperboard"></div>
-                    <p>Movies</p>
-                    <div class="icon-snowboard-race"></div>
-                    <p>Snowboarding Gaming</p>
-                    <div class="icon-gamepad"></div>
-                    <p>Gaming</p>
+                    <figure>
+                        <div class="icon icon-art"></div>
+                        <figcaption>
+                            <span>Drawing/Art</span>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <div class="icon icon-camera"></div>
+                        <figcaption>
+                            <span>Photography</span>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <div class="icon icon-clapperboard"></div>
+                        <figcaption>
+                            <span>Movies</span>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <div class="icon icon-snowboard-race"></div>
+                        <figcaption>
+                            <span>Snowboarding</span>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <div class="icon icon-gamepad"></div>
+                        <figcaption>
+                            <span>Gaming</span>
+                        </figcaption>
+                    </figure>
                 </section>
 
 
