--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <span> Andrienko</span>
                 </div>
                 <div class="header__main-info">
-                    10 years’ experience of development and implementation of complex software solutions.
+                    10 years’ experience implementation of complex software solutions.
                 </div>
                 <div class="header__avatar"></div>
                 <div class="header__personal-info">
@@ -107,10 +107,11 @@
                     </div>
                     <section class="education__content">
                         <b>National Technical University of Ukraine</b> </br>
-                        <span class="education__paragraph">Department</span>
+                        <span class="education__paragraph">Department:</span>
                         <span class="education__info">Informatics and Computer Science, Technical Cybernetics</span>
-                        <span class="education__paragraph">Specialty</span>
-                        <span class="education__info">‘Computer Science’ , ‘Flexible computerized systems and robotics’</span>
+                        <span class="education__paragraph">Specialty:</span>
+                        <span class="education__info">‘Computer Science’ , ‘Flexible computerized systems and
+                            robotics’</span>
                     </section>
                 </section>
 
@@ -135,7 +136,15 @@
                     </ul>
 
                     <div class="section-title">
-                        Previously worked with
+                        <div class="icon-tools"></div>
+                        Tools
+                    </div>
+                    <div>
+                        <p>Git, Hg, VSCode, Idea, SVN, WebPack, NPM, Windows, Linux, MasOS, Jira, Confluence</p>
+                    </div>
+                    <div class="section-title">
+                        <div class="icon-gear"></div>
+                        Previously worked
                     </div>
                     <div id="tag-cloud"></div>
                 </section>
