--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>My CV</title>
+    <title>Alexandr Andriienko Software Developer</title>
     <meta charset=utf-8 />
     <meta name=viewport content=width=device-width,initial-scale=1>
     <link rel=stylesheet type="text/css" href="./dist/index.css">
@@ -94,7 +94,7 @@
                     <figure>
                         <div class="icon icon-art"></div>
                         <figcaption>
-                            <span>Drawing/Art</span>
+                            <span>Drawing</span>
                         </figcaption>
                     </figure>
                     <figure>
