--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     education
                 </div>
                 <section class="education__content">
-                    <b>National Technical University of Ukraine</b> </br>
+                    <b>National Technical University of Ukraine (KPI)</b> </br>
                     <!-- <span class="education__paragraph">Department:</span> -->
                     <span class="education__info">Informatics and Computer Science, (FIOT) Technical
                             Cybernetics</span>
