--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <title>Alexandr Andriienko Software Developer</title>
     <meta charset=utf-8 />
-    <meta name=viewport content=width=device-width,initial-scale=1>
+    <meta name=viewport content=width=device-width,initial-scale=1,shrink-to-fit=no>
     <link rel=stylesheet type="text/css" href="./dist/index.css">
     <link rel="shortcut icon" href="favicon.ico" />
 </head>
 
 <body>
-    <div class="printable-page">
+    <div size="A4" class="printable-page">
         <header class="header">
             <div class="icon-bg2 bg-image"></div>
             <div class="header__name">
@@ -114,10 +114,8 @@
                 </div>
                 <section class="education__content">
                     <b>National Technical University of Ukraine (KPI)</b> </br>
-                    <!-- <span class="education__paragraph">Department:</span> -->
                     <span class="education__info">Informatics and Computer Science, (FIOT) Technical
                             Cybernetics</span>
-                    <!-- <span class="education__paragraph">Specialty:</span> -->
                     <span class="education__info">Specialty ‘Computer Science’ , ‘Flexible computerized systems and
                             robotics’</span>
                 </section>
